k8s/apps/garage/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage
  namespace: garage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: garage
    spec:
      containers:
      - name: garage
        image: dxflrs/garage:v1.0.1
        ports:
        - name: s3-api
          containerPort: 3900
        - name: rpc
          containerPort: 3901
        - name: s3-web
          containerPort: 3902
        - name: admin
          containerPort: 3903
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - name: config
          mountPath: /etc/garage.toml
          subPath: garage.toml
        - name: data
          mountPath: /var/lib/garage
      volumes:
      - name: config
        configMap:
          name: garage-config
      - name: data
        persistentVolumeClaim:
          claimName: garage-data
