k8s/apps/garage/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
spec:
  selector:
    app: garage
  ports:
  - name: s3-api
    port: 3900
    targetPort: 3900
  - name: rpc
    port: 3901
    targetPort: 3901
  - name: s3-web
    port: 3902
    targetPort: 3902
  - name: admin
    port: 3903
    targetPort: 3903
